Changes: * The number of children inside a node is now shown. * Added the possibility of specifying the node data type. Currently available types are String, Number and Json. A specific Json editor is shown when the data type for a node is set to Json. * The navigation between nodes is now made via the application routing. This way it is possible to navigate back and forth in the browser history. * Fixed bug that caused an error when setting the value into, getting the value from and deleting nodes whose names contained dots. * Fixed a bug in the saving of exports that removed all the whitespaces in the generated export. * Added the 409 status code (conflict) when an attempt is made of creating a node whose path already exists. * Added the 404 status code (not found) when a node is referenced whose path cannot be found in ZooKeeper. * Fixed the swagger documentation, that was not being shown.
