# zookeeper-ui-web/src/app/autogenerated/model/models.ts
@@ -1,5 +1,5 @@
 export * from './ChildrenNodes';
-export * from './ErrorMessage';
 export * from './NodeCreationRequest';
 export * from './NodeData';
+export * from './NodeDataType';
 export * from './NodeExport';
