# zookeeper-ui-web/src/app/components/node/node.component.ts
@@ -1,9 +1,13 @@
-import { Component, OnInit, Input, Output, EventEmitter } from '@angular/core';
+import { Component, OnInit, Input, Output, EventEmitter, ViewChild } from '@angular/core';
 import { Node } from '../../model/Node';
 import { ConfigApi } from '../../autogenerated/api/ConfigApi';
 import { BsModalService } from 'ngx-bootstrap/modal';
 import { BsModalRef } from 'ngx-bootstrap/modal/bs-modal-ref.service';
 import { AlertList, Alert, AlertType} from '../alerts/alerts.component';
+import { NodeDataType } from '../../autogenerated/model/NodeDataType';
+import JSONEditor from 'jsoneditor';
+import { JSONEditorOptions } from 'jsoneditor';
+import { Observable } from 'rxjs';
 
 @Component({
   selector: 'app-node',
@@ -13,51 +17,83 @@ import { AlertList, Alert, AlertType} from '../alerts/alerts.component';
 export class NodeComponent implements OnInit {
   @Input() node: Node;
   @Output() onNavigateToNode = new EventEmitter<void>();
-  private _editable: boolean;
+  editing: boolean;
   modalRef: BsModalRef;
   alerts: AlertList;
-  editedValue: string;
+  _editedValue: string;
+  nodeDataTypes: string[] = Object.values(NodeDataType);
+  NodeDataType = NodeDataType;
+  @ViewChild('jsoneditor') jsonEditorContainer: any;
+  jsonEditor: JSONEditor;
 
-  constructor(private _configApi : ConfigApi, private modalService: BsModalService) {
-    this._editable = false;
+  constructor(private _configApi : ConfigApi,
+              private modalService: BsModalService) {
     this.alerts = new AlertList();
+    this.editing = false;
   }
 
   ngOnInit() {
     this.retrieveNodeData();
+    this.retrieveNodeDataType();
+
+    // create the jsonEditor
+    this.jsonEditor = new JSONEditor(this.jsonEditorContainer.nativeElement, {});
+    this.jsonEditor.setMode('code');
   }
 
   navigateToNode() {
     this.onNavigateToNode.emit();
   }
 
-  set editable(value: boolean) {
-    this._editable = true;
-    document.getElementById("nameInput").focus();
+  get editedValue(): string {
+    if (this.node.type === NodeDataType.Json) {
+      return this.jsonEditor.getText();
+    } else {
+      return this._editedValue;
+    }
   }
 
-  get editable(): boolean {
-    return this._editable;
+  set editedValue(value: string) {
+    if (this.node.type === NodeDataType.Json) {
+      this.jsonEditor.setText(this.node.value);
+    } else {
+      this._editedValue = value;
+    }
+  }
+
+  setNodeData() {
+    this.node.value = this.editedValue;
+    this._configApi.setNodeData(this.node.path, { data: this.node.value }).subscribe(
+      data => {
+        this.alerts.addAlert({
+          alertType: AlertType.Success,
+          message: 'Node value correctly saved',
+          timeOut: 4000
+        });
+        this.editing = false;
+      },
+      error => {
+        this.onHttpError(error);
+      }
+    );
   }
 
   onValueEdited(event: any): void {
     // The pressed key is enter
     if (event.keyCode == 13) {
-      this._editable = false;
-      this.node.value = this.editedValue;
-      this._configApi.setNodeData(this.node.path, { data: this.node.value }).subscribe(
-        data => {},
-        error => {
-          this.onHttpError(error);
-        }
-      );
+      this.editing = false;
+      this.setNodeData();
     }
 
     // The pressed key is escape
     if (event.keyCode == 27) {
-      this._editable = false;
-      this.editedValue = this.node.value;
+      this.cancelEdition();
     }
+  }
+
+  cancelEdition() {
+    this.editing = false;
+    this.editedValue = this.node.value;
   }
 
   openDeletionModal(template: any) {
@@ -89,6 +125,41 @@ export class NodeComponent implements OnInit {
         nodeData => {
           this.node.value = nodeData.data;
           this.editedValue = nodeData.data;
+          this.jsonEditor.setText(nodeData.data);
+        },
+        error => {
+          this.onHttpError(error);
+        }
+      );
+  }
+
+  retrieveNodeDataType() {
+    this._configApi.getNodeDataType(this.node.path)
+      .subscribe(
+        (nodeDataType: NodeDataType) => {
+          this.node.type = nodeDataType;
+        },
+        error => {
+          this.onHttpError(error);
+        }
+      );
+  }
+
+  setDataType(type: string) {
+    let nodeDataType = NodeDataType[type];
+
+    this._configApi.setNodeDataType(this.node.path, nodeDataType)
+      .subscribe(
+        () => {
+          this.node.type = nodeDataType;
+          if (nodeDataType === NodeDataType.Json) {
+            this.jsonEditor.set(JSON.parse(this.node.value));
+          }
+          this.alerts.addAlert({
+            alertType: AlertType.Success,
+            message: "Node type successfully changed!",
+            timeOut: 4000
+          })
         },
         error => {
           this.onHttpError(error);
