# zookeeper-ui-web/src/app/model/Node.ts
@@ -1,39 +1,43 @@
+import { NodeDataType } from '../autogenerated/model/NodeDataType';
+
+const pathSeparator: string = '~~';
+
 export class Node {
   public path: string;
   public name: string;
   public value: string;
-  private _parent: Node;
+  public type: NodeDataType;
   private _children: Node[];
+  private _parent: Node;
+  public static ROOT_NODE_PATH = pathSeparator;
 
-  public static ROOT_NODE = new Node('~', 'Root');
-
-  constructor(path: string, name: string, parent?: Node) {
+  constructor(path: string, parent?: Node) {
     this.path = path;
-    this.name = name;
-    this._parent = parent;
+    this.name = Node.getNodeNameFromPath(path);
     this._children = [];
-  }
-
-  get nodeParents(): Node[] {
-    var parents: Node[] = [];
-    var node: Node = this;
-    do {
-      parents.push(node);
-      node = node._parent;
-    } while (node);
-    return parents.reverse();
+    this._parent = parent;
+    this.type = NodeDataType.String;
   }
 
   private getChildNodePath(child: string): string {
-    var result: string = this.path;
-    if (!result.endsWith('~'))
-      result += '~';
+    let result: string = this.path;
+    if (!result.endsWith(pathSeparator))
+      result += pathSeparator;
     result += child;
     return result;
   }
 
+  private static getNodeNameFromPath(path: string): string {
+    let pathSegments = path.split(pathSeparator).filter(pathSegment => pathSegment.length > 0);
+    if (pathSegments.length > 0) {
+      return pathSegments[pathSegments.length - 1];
+    } else {
+      return 'Root';
+    }
+  }
+
   addChildNode(child: string): Node {
-    var childNode = new Node(this.getChildNodePath(child), child, this);
+    let childNode = new Node(this.getChildNodePath(child), this);
     this._children.push(childNode);
     this._children.sort((a, b) => a.name.localeCompare(b.name));
     return childNode;
@@ -52,9 +56,26 @@ export class Node {
   }
 
   delete(): void {
-    var i = this._parent.children.indexOf(this);
+    if (this._parent === undefined)
+      return;
+
+    let i = this._parent.children.indexOf(this);
     if(i != -1) {
       this._parent.children.splice(i, 1);
     }
+  }
+
+  get parents(): Node[] {
+    let parents: Node[] = [];
+    let parentPath: string = pathSeparator;
+    parents.push(new Node(Node.ROOT_NODE_PATH));
+
+    let pathSegments = this.path.split(pathSeparator).filter(pathSegment => pathSegment.length > 0);;
+
+    for (let pathSegment of pathSegments) {
+      parentPath += pathSegment;
+      parents.push(new Node(parentPath));
+    }
+    return parents;
   }
 }
